tdf#97235: Protect reset_view when called with no tile buffer initialized

This can happen when no document has been loaded yet.

Change-Id: Ib9c18e22b6c344528d05eb781bf9b3052060089a
(cherry picked from commit f4e13bc973ed50bed80f2833dc8e5bc7a69bb44e)